--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@netlify/blobs": "^10.6.0",
     "bcryptjs": "^3.0.3",
     "framer-motion": "^11.15.0",
+    "mongodb": "^7.1.0",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
